Fix spacing issue

--- a/app/_scss/modules/projects/_minor.scss
+++ b/app/_scss/modules/projects/_minor.scss
@@ -28,7 +28,7 @@
   margin-bottom: $large-spacing;
 
   &:last-child {
-    margin-bottom: 0;
+    margin-bottom: $base-spacing;
   }
 }
 
